public/css/sidebar.css
#wrapper {
    padding-left: 50px;
    transition: all .4s ease 0s;
    min-height:100%;
    /*height: 100%*/
}

#sidebar-wrapper {
    margin-left: -150px;
    left: 0px;
    width: 220px;
    background: #f2f2f2;
    position: fixed;
    height: 100%;
    z-index: 100;
    transition: all .4s ease 0s;
}

.sidebar-nav {
    display: block;
    float: left;
    width: 220px;
    list-style: none;
    margin: 0;
    padding: 0;
}

.subside {
  display: block;
  float: left;
  width: 220px;
  list-style: none;
  margin: 0;
  padding: 0;
}

#page-content-wrapper {
    /*padding-top: 50px;*/
    padding-left: 50;
    margin-left: 0;
    width: auto;
    height: auto;
}
#wrapper.active {
    padding-left: 220px;
}
#wrapper.active #sidebar-wrapper {
    left: 150px;
}

#sidebar_menu li a, .sidebar-nav li a, .subside a {
    color: #262626;
    display: block;
    float: left;
    text-decoration: none;
    width: 220px;
    background: #f2f2f2;
    /*border-top: 1px solid #999999;*/
    /*border-bottom: 1px solid #999999;*/
    -webkit-transition: background .5s;
    -moz-transition: background .5s;
    -o-transition: background .5s;
    -ms-transition: background .5s;
    transition: background .5s;
}
.sidebar_name {
    padding-top: 25px;
    color: #262626;
    /*opacity: .7;*/
}

.sidebar-nav li {
  line-height: 40px;
  text-indent: 20px;
}

.sidebar-nav li a {
  color: #262626;
  display: block;
  text-decoration: none;
}

.subside a{
  line-height: 30px;
  text-indent: 30px;
  color: #262626;
  display: block;
  text-decoration: none;
}

h3:target{
  padding-top: 60px;
}

/*.sidebar-nav li a:hover {
  color: #fff;
  background: #99ccff;
  text-decoration: none;
}*/

#sidebar li a:hover, .subside a:hover {
  color: #fff;
  background: #99ccff;
  text-decoration: none;
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
  text-decoration: none;
  color: #fff;
  background: #1E90FF;
}

.sidebar-nav li.active a{
  color: #fff;
  background: #1E90FF;
  text-decoration: none;
}

.sidePanel{
    padding-bottom: 0;
}

/*.sidebar-nav > .sidebar-brand {
  height: 65px;
  line-height: 60px;
  font-size: 18px;
}*/

/*.sidebar-nav > .sidebar-brand a {
  color: #262626;
}*/

/*.sidebar-nav > .sidebar-brand a:hover {
  color: #fff;
  background: #99ccff;
}*/

#main_icon
{
  float:right;
  padding-right: 20px;
  padding-top: 12px;
}

#main_icon:hover{
  color: #1E90FF;
}

.sub_icon
{
  float:right;
  padding-right: 20px;
  padding-top: 12px;
}
.content-header {
  height: 65px;
  line-height: 65px;
}

.content-header h1 {
  margin: 0;
  margin-left: 20px;
  line-height: 65px;
  display: inline-block;
}

/*@media (max-width:767px) {
  #wrapper {
    padding-left: 50px;
    transition: all .4s ease 0s;
  }
  #sidebar-wrapper {
      left: 50px;
  }
  #wrapper.active {
      padding-left: 150px;
  }
  #wrapper.active #sidebar-wrapper {
      left: 50px;
      width: 200px;
      transition: all .4s ease 0s;
  }
}*/

